<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_calc"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="openCalc"
        android:text="@string/button_calculadora"
        android:textColor="@color/color_buttons_functions"
        app:layout_constraintBottom_toTopOf="@+id/button_localizacao"
        app:layout_constraintEnd_toStartOf="@+id/button_agenda"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

    <Button
        android:id="@+id/button_agenda"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="openAgenda"
        android:text="@string/button_agenda_telefonica"
        android:textColor="@color/color_buttons_functions"
        android:textColorHighlight="@color/color_text"
        app:layout_constraintBottom_toTopOf="@+id/button_navegador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_calc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

    <Button
        android:id="@+id/button_localizacao"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="124dp"
        android:onClick="openLocalizacao"
        android:shadowColor="@color/color_text"
        android:text="@string/button_maps"
        android:textColor="@color/color_buttons_functions"
        android:textColorHighlight="@color/color_text"
        android:textColorHint="@color/color_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_navegador"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calc" />

    <Button
        android:id="@+id/button_navegador"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="124dp"
        android:onClick="openBrowser"
        android:text="@string/button_navegador"
        android:textColor="@color/color_buttons_functions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_localizacao"
        app:layout_constraintTop_toBottomOf="@+id/button_agenda" />
</androidx.constraintlayout.widget.ConstraintLayout>